--- a/app/views/itineraries/_form.html.erb
+++ b/app/views/itineraries/_form.html.erb
@@ -29,7 +29,7 @@
 
     <div class="row">
       <div class="col-6">
-        <%= f.select :client_id, User.where(role: 'client').all.collect { |x| [x.name, x.id.to_i]}, {label: "Select client" } %>
+        <%= f.select :client_id, User.get_clients.collect { |x| [x.name, x.id.to_i]}, {label: "Select client" } %>
       </div>
       <div class="col-6">
         <%= f.text_field :members %>
