--- a/app/views/products/show_nearby_products.html.erb
+++ b/app/views/products/show_nearby_products.html.erb
@@ -49,5 +49,5 @@
   <br>
 </div>
 <dir class="row">
-  <%= render 'product_listing', resources: @resources %>
+  <%= render 'product_listing', resources: @resources, itinerary_schedule_id: @itinerary_schedule_id || '' %>
 </div>
