--- a/app/views/itineraries/_itinerary_products_modal.html.erb
+++ b/app/views/itineraries/_itinerary_products_modal.html.erb
@@ -29,7 +29,7 @@
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         <%#= f.submit "Add" %>
-        <button class="add_btn">Add</button>
+        <button class="add_btn btn btn-primary">Add</button>
         </div>
         <% end %>
     </div>
