--- a/app/views/itineraries/show.html.erb
+++ b/app/views/itineraries/show.html.erb
@@ -31,7 +31,7 @@
   <div class="col-6">
     <div class="row mt-2">
       <div class="col-6">
-       <span class="d-inline-block"><b>Transport Type: </b><%= @resource.transport_type.name %></span>
+       <span class="d-inline-block"><b>Transport Type: </b><%= @resource&.transport_type&.name %></span>
      </div>
     <div class="col-6">
       <span class="d-inline-block"><b>Price: </b><%= @resource.price %></span>
