--- a/app/views/itineraries/index.html.erb
+++ b/app/views/itineraries/index.html.erb
@@ -14,7 +14,7 @@
         <th>Status</th>
         <th>Client</th>
         <th>Price</th>
-        <th colspan="2">Action</th>
+        <th colspan="3">Action</th>
         
       </tr>
     </thead>
@@ -28,6 +28,7 @@
           <td><%= itinerary.client.get_client_name %></td>
           <td><%= itinerary.price %></td>
           <td><%= link_to("View", itinerary_path(itinerary)) %></td>
+          <td><%= link_to("Edit", edit_itinerary_path(itinerary)) %></td>
           <td><%= link_to "Delete", itinerary_path(itinerary), method: :delete, data: {confirm: "Are you sure?"} %></td>
 
         </tr>
