--- a/app/views/itineraries/show.html.erb
+++ b/app/views/itineraries/show.html.erb
@@ -10,7 +10,7 @@
        <span class="d-inline-block"><b>From-To: </b><%= from_to_date(@resource) %></span>
      </div>
     <div class="col-6">
-      <span class="d-inline-block"><b>Members: </b><%= @resource.members %></span>
+      <span class="d-inline-block"><b>Status: </b><%= @resource.status %></span>
     </div>
   </div>
   </div>
@@ -19,22 +19,22 @@
   <div class="col-8">
     <div class="row mt-2">
       <div class="col-6">
-       <span class="d-inline-block"><b>Status: </b><%= @resource.status %></span>
-     </div>
-    <div class="col-6">
-      <span class="d-inline-block"><b>Client: </b><%= @resource.client.get_client_name %></span>
+        <span class="d-inline-block"><b>Min Members: </b><%= @resource.min_members %></span>
+      </div>
+      <div class="col-6">
+        <span class="d-inline-block"><b>Max Members: </b><%= @resource.max_members %></span>
+      </div>
     </div>
-  </div>
   </div>
 </div>
 <div class="row">
   <div class="col-8">
     <div class="row mt-2">
       <div class="col-6">
-       <span class="d-inline-block"><b>Transport Type: </b><%= @resource&.transport_type&.name %></span>
+       <!-- <span class="d-inline-block"><b>Transport Type: </b><%#= @resource&.transport_type&.name %></span> -->
      </div>
     <div class="col-6">
-      <span class="d-inline-block"><b>Price: </b><%= @resource.price %></span>
+      <!-- <span class="d-inline-block"><b>Price: </b><%#= @resource.price %></span> -->
     </div>
   </div>
   </div>
@@ -46,7 +46,7 @@
        <span class="d-inline-block"><b>Duration: </b><%= @resource.duration+' '+@resource.duration_type %></span>
      </div>
     <div class="col-6">
-       <span class="d-inline-block"><b>Expenses: </b><%= @resource.expenses %></span>
+       <!-- <span class="d-inline-block"><b>Expenses: </b><%#= @resource.expenses %></span> -->
     </div>
   </div>
   </div>
