--- a/app/views/itineraries/show.html.erb
+++ b/app/views/itineraries/show.html.erb
@@ -9,9 +9,6 @@
       <div class="col-6">
        <span class="d-inline-block"><b>From-To: </b><%= from_to_date(@resource) %></span>
      </div>
-    <div class="col-6">
-      <span class="d-inline-block"><b>Status: </b><%= @resource.status %></span>
-    </div>
   </div>
   </div>
 </div>
@@ -19,17 +16,28 @@
   <div class="col-8">
     <div class="row mt-2">
       <div class="col-6">
-        <span class="d-inline-block"><b>Min Members: </b><%= @resource.min_members %></span>
+        <span class="d-inline-block"><b>Status: </b><%= @resource.status %></span>
       </div>
+  </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-8">
+    <div class="row mt-2">
       <div class="col-6">
-        <span class="d-inline-block"><b>Max Members: </b><%= @resource.max_members %></span>
+      <% if @resource.min_members.present? && @resource.max_members.present? %>
+        <span class="d-inline-block"><b>Members: </b><%= @resource.min_members %></span>-
+        <span class="d-inline-block"><b></b><%= @resource.max_members %></span>
+      <% else %>
+        <span class="d-inline-block"><b>Members: </b>Not fixed</span>
+      <% end %>
       </div>
     </div>
   </div>
 </div>
 <div class="row">
   <div class="col-8">
-    <div class="row mt-2">
+    <div class="row">
       <div class="col-6">
        <!-- <span class="d-inline-block"><b>Transport Type: </b><%#= @resource&.transport_type&.name %></span> -->
      </div>
