--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -20,6 +20,7 @@
           <li class="nav-item"><%= link_to 'Nearby products', show_nearby_products_products_path, class: 'nav-link',:"data-turbolinks" => false %></li>
           <li class="nav-item"><%= link_to 'Transport Type', transport_types_path, class: 'nav-link' %></li>
           <li class="nav-item"><%= link_to 'Itineraries', itineraries_path, class: 'nav-link' %></li>
+          <li class="nav-item"><%= link_to 'Schedules', schedules_path, class: 'nav-link' %></li>
         <% end %>
         <li class="nav-item"><%= link_to 'Products', products_path, class: 'nav-link' %></li>
         <li class="nav-item"><%= link_to 'Clients', users_path, class: 'nav-link' if current_user.user? %></li>
