add timepicker in schedule

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,7 @@
 @import "bootstrap";
 @import "rails_bootstrap_forms";
+@import "font-awesome-sprockets";
+@import "font-awesome";
+@import "bootstrap-timepicker";
 @import "style";
 @import 'lightbox';
