--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -36,3 +36,13 @@ img.raty-cancel {
 .error_message{
   color: red;
 }
+.timepicker_addon{
+  padding: 10px 4px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1;
+  color: #555;
+  text-align: center;
+  background-color: #eee;
+  border: 1px solid #ccc;
+}
