--- a/app/views/itineraries/show.html.erb
+++ b/app/views/itineraries/show.html.erb
@@ -70,7 +70,6 @@
           Day <%= i %> - <b><%= @resource.start_date ? (@resource.start_date.to_date+i-1).strftime("%d %B %Y") : 'Not Fixed' %></b>
           </div>
           <div class="card-body">
-
             <div class="row pickup_attributes">
               <div class="col-5">
                 <div class="row">
@@ -103,8 +102,11 @@
                     <% @resource.itinerary_schedules[i-1].itinerary_products.each do |itinerary_product| %>
                       <div class="row mb-2">
                         <div class="col-5">
-                          <%= time_field_tag :timing, itinerary_product.timing&.strftime("%H:%M"), class: "form-control product_timings" %>
-                          <%= hidden_field_tag "product_itinerary_id", itinerary_product.id, class: "product_itinerary_id" %>
+                          <div class="input-group bootstrap-timepicker timepicker">
+                            <%= text_field_tag :timing, itinerary_product.timing&.strftime("%H:%M"), class: "form-control product_timings input-small timepicker1" %>
+                            <span class="input-group-addon timepicker_addon"><i class="far fa-clock" aria-hidden="true"></i></span>
+                            <%= hidden_field_tag "product_itinerary_id", itinerary_product.id, class: "product_itinerary_id" %>
+                          </div>
                         </div>
                         <div class="col-5">
                           <span class="mr-2"><%= link_to itinerary_product.product&.name, product_path(itinerary_product.product), target: "_blank" %></span>
@@ -150,7 +152,7 @@
   <%= submit_tag 'Submit', class: 'btn btn-primary' %>
 <% end %>
 <script>
-  $('.product_timings').on('blur',function(){
+  $('.timepicker1').timepicker().on('hide.timepicker', function(e) {
     var timing = $(this).val();
     var itinerary_product_id = $(this).siblings('.product_itinerary_id').val();
     if (timing != ""){
@@ -162,7 +164,6 @@
       })
     }
   })
-
 </script>
 
 
